--- a/client/package.json
+++ b/client/package.json
@@ -27,13 +27,15 @@
 		"react-dropzone": "^14.3.8",
 		"react-markdown": "^10.1.0",
 		"sonner": "^2.0.2",
-		"tailwind-merge": "^3.0.2"
+		"tailwind-merge": "^3.0.2",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/uuid": "^9.0.8",
 		"tailwindcss": "^4",
 		"typescript": "^5"
 	}
