--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -11,4 +11,9 @@ tqdm>=4.64.0
 flask_cors>=3.0.10
 cloudinary>=1.36.0
 requests>=2.31.0
-gunicorn>=20.1.0
+torch>=2.0.0
+torchvision>=0.15.0
+scikit-image>=0.19.3
+scipy>=1.9.0
+ultralytics>=8.1.0
+transformers>=4.30.0
